--- a/scss/_formats.scss
+++ b/scss/_formats.scss
@@ -1,3 +1,5 @@
+$highlight: #AA0000;
+
 body {
   font-family: "AveriaLibre";
   font-size: 16px;
@@ -20,11 +22,29 @@ p {
 h1,
 h2 {
   margin: 0;
+  color: $highlight;
+}
+
+a,
+caption {
+  color: $highlight
+}
+
+h1 {
+  font-size: 3em;
+}
+
+h2 {
+  font-size: 2em;
 }
 
 img {
   width: 100%;
   margin-bottom: 1em;
+}
+
+a.bookmark {
+  text-decoration: none;
 }
 
 %page {
@@ -39,7 +59,7 @@ div.enemy {
   @extend %page;
   display: flex;
   flex-direction: row;
-  gap: 10px;
+  gap: 35px;
 
   div.text {
     flex: 4;
@@ -54,6 +74,10 @@ div.enemy {
 
     p {
       margin: 0;
+
+      span.bold {
+        color: $highlight;
+      }
     }
   }
 
@@ -82,29 +106,62 @@ div.enemy {
   }
 }
 
+%td {
+  border: 1px solid black !important;
+  padding: 2px 4px;
+}
+
 table {
   width: 100%;
   border-spacing: 0;
   margin-top: 1em;
 
+
   caption {
     font-size: 20px;
   }
 
-  td {
-    border: 1px solid black;
-    padding: 2px 4px;
 
-    &:first-child {
-      width: 10%;
+  &.page {
+    border-collapse: collapse;
+
+    thead td,
+    tfoot td {
       text-align: center;
+      font-size: 80%;
+    }
+
+    td {
+      border: none;
+
     }
   }
 
   &.attack {
+    tr:first-child {
+      background-color: #AA0000;
+      color: white;
+    }
+
     td {
+      @extend %td;
       width: 14%;
       text-align: center;
     }
   }
+
+  &.mien {
+    td {
+
+      @extend %td;
+
+      &:first-child {
+        background-color: $highlight;
+        color: white;
+        width: 10%;
+        text-align: center;
+      }
+    }
+  }
+
 }
